# olc-datafile-rust

./: Cargo.toml  LICENSE  README.md
examples/: usage.rs
src/: datafile.rs  lib.rs
src/lexical/: integer.rs  mod.rs  real.rs  string.rs
src/processor/: reader.rs  writer.rs
